Quorum3/Library/Tests/TemplatingGenerated/Pass/TwoTypePriObjNumberRetInteger.quorum
class Main
    action Main
        Yoda<Integer, Integer, number> yoda
        number y = yoda:useForce(66, 66)
        output "passed"
     end
end
