Quorum3/Library/Tests/TemplatingGenerated/Fail/TwoTypeObjPriNumberRetIntegerFail.quorum
class Main
    action Main
        Yoda<Integer, Integer, number> yoda
        boolean y = yoda(66, 66, true)
     end
end
